--- a/notebooks/logical_perceptrons.ipynb
+++ b/notebooks/logical_perceptrons.ipynb
@@ -13,7 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from core.perceptrons import *\n",
+    "from context import perceptrons\n",
+    "from perceptrons.perceptrons import *\n",
     "%matplotlib inline"
    ]
   },
