--- a/perceptrons.ipynb
+++ b/perceptrons.ipynb
@@ -13,8 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from context import perceptrons\n",
-    "from perceptrons.perceptrons import *\n",
+    "from perceptrons import *\n",
     "%matplotlib inline"
    ]
   },
@@ -131,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
