--- a/perceptrons-in-colab.ipynb
+++ b/perceptrons-in-colab.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ANDPerceptron()()"
+    "and_perceptron()"
    ]
   },
   {
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ORPerceptron()()"
+    "or_perceptron()"
    ]
   },
   {
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NOTPerceptron()()"
+    "not_perceptron()"
    ]
   },
   {
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "XORPerceptron()()"
+    "xor_perceptron()"
    ]
   },
   {
@@ -118,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "XOR2LayerPerceptron()(print_help=True)"
+    "xor_mlp()"
    ]
   }
  ],
